fix contrast in footer meni items

--- a/css/index.css
+++ b/css/index.css
@@ -279,7 +279,7 @@ main {
 }
 
 .footer a {
-  color: #777676;
+  color: #bbb;
 }
 
 .footer a:hover {
